Login is now with id not username

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -37,7 +37,7 @@
 			<div class="form-login">
 				<h4>Please login to continue</h4>
 				<form action="Validate">
-					<input type="text" name="username" placeholder="Username">
+					<input type="text" name="id" placeholder="ID">
 					<input type="password" name="password" placeholder="Password">
 					<input type="submit" value="Login" class="submit">
 				</form>
